packages/fortifier-macros-tests/tests/validations/regex/invalid_expression_fail.rs
use fortifier::Validate;

#[derive(Validate)]
struct RegexData<'a> {
    #[validate(regex = "abc")]
    value: &'a str,
}

fn main() {}
